# c2526-R5

./: .claudeignore  .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Ivan García - Acceso directo.lnk  Preparacion_y_Analisis_de_los_Datos.docx  README.md  generar_token_drive.py  pyproject.toml  resultados_modelos.md
.github/workflows/: mta_automatizacion.yml
app/: app.py  cache.py  config.py  schemas.py
app/data/: drive.py  gtfs_rt_cache.py  train_infer.py  transforms.py  vehicles.py
app/models/: alertas_infer.py  dcrnn_infer.py  delay_infer.py  delta_infer.py  registry.py
app/routers/: health.py  predict.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: index.html
artifacts/: modelo_logreg_optuna.joblib  modelo_logreg_randomized.joblib
docs/: funcionamiento_orquestadores.md
notebooks/: analisis_alertas.ipynb  analisis_datos_clima.ipynb  analisis_eventos.ipynb  analisis_gtfs_historico.ipynb  eda_alertas.ipynb  eda_gtfs_cleaned.ipynb  propuesta_analisis_alertas.ipynb
notebooks/gtfs_historico/: eda_gtfs_cleaned.ipynb
src/: notebook_realtime_data.ipynb
src/ETL/alertas_oficiales_tiempo_real/: extraccion_historico_2025.py  extract_alertas_oficiales_tiempo_real.py  transform.py
src/ETL/clima/: clima_realtime.py  extraccion_historico_clima.py  transform.py
src/ETL/eventos/: conciertos.py  deportes.py  eventos_nyc.py  ingest.py  ingest_actual_eventos.py  raw_to_processed.py  transform.py  utils_eventos.py
src/ETL/gtfs_historico/: ingest.py  transform.py
src/ETL/pipelines/: aggregate_lines_yearly.py  aggregate_realtime_dataset.py  generate_final_dataset.py  generate_realtime_dataset.py  local_realtime_worker.py  preprocess_lgbm.py  preprocess_realtime_lgbm.py  run_extraccion.py  run_transform.py  split_final_by_line.py  upload_daily_data.py  upload_realtime_window.py
src/ETL/tiempo_real_metro/: aggregations.py  realtime_data.py  vehicle_positions.py
src/alertas_oficiales_tiempo_real/: extract_alertas_oficiales_tiempo_real.py
src/clima/: Climate_extraction.ipynb  Climate_extraction.py  Climate_extraction_2.ipynb  Climate_extraction_2.py  Extraccion_clima.py  Extraccion_clima_historico.py  clima_analisis.ipynb  clima_analisis.py  clima_realtime.py  extraccion_historico_clima.py  transform.py
src/common/: borrar_carpeta_minio.py  minio_client.py
src/eventos/: Jambase.py  add_paradas_mongo.py  conciertos.py  deportes.py  eventos_actual_final.py  eventos_nyc.py  histoticoDeportes.py  ingest.py  notebook_eventos_final.ipynb  notebook_paradas_afectadas.ipynb  notebook_seatgeek.ipynb  nycopendataHistorico.py  raw_to_processed.py  transform.py
src/gtfs_historico/: ingest.py  transform.py
src/models/: Explicación variables escogidas.md  seleccion_variables.md
src/models/common/: time_aggregations.py
src/models/merge/: eventos_merge.ipynb
src/models/modelos_alertas/: XGBoost_alertas.py  nueva_idea_rf.ipynb  tecnica_RandomForest.ipynb  tecnica_XGBoost.ipynb  tecnica_logistica.ipynb
src/models/prediccion_propagacion/: 01_generar_grafo.py  02_generar_tensores.py  03_baseline_naive.py  04_baseline_ha.py  05_ablacion_features.py  06_tuning_hpo.py  07_entrenamiento_final.py  07_tuning_stgcn.py  10_entrenamiento_final_stgcn.py  11_entrenamiento_final_astgcn.py  dcrnn.ipynb  script_astgcn.py  script_stgcn.py  stgcn.ipynb
src/models/prediccion_retrasos/: XGBoost.py  basado_en_arboles.ipynb  baseline_agrupacion_tiempo.py  mejora_delta.ipynb  modelo_por_intervalos.py  optimizacion_hiperparametros.py  run_search_overnight.py  run_test_lgbm_final.py  train_lgbm_classifier_optuna.py  train_lgbm_stop_delay.py
src/models/propagacion_estacion/: 01_generar_grafo.py  02_generar_tensores.py  03_baseline_naive.py  04_baseline_ha.py  05_ablacion_features.py  06_tuning_hpo_dcrnn.py  07_tuning_stgcn.py  08_tuning_astgcn.py  09_entrenamiento_final_dcrnn.py  10_entrenamiento_final_stgcn.py  11_entrenamiento_final_astgcn.py  12_evaluacion_modelos.py  script_astgcn.py  script_stgcn.py
src/pipelines/: run_extraccion.py  run_transform.py
src/tiempo_real_metro/: notebook_realtime_data.ipynb  realtime_data.py
src/web/: app.py
(+92 files in other folders)
