[project]
name = "c2526-r5"
version = "0.1.0"
description = "Proyecto de Datos I (Grupo 5) - pipeline y API"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "requests",
  "requests-cache",
  "retry-requests",
  "python-dotenv",
  "pytz",
  "openmeteo-requests",
  "gtfs-realtime-bindings",
  "protobuf",
  "minio",
  "geopy>=2.4.1",
  "scipy>=1.17.1",
  "scikit-learn>=1.8.0",
  "bs4>=0.0.2",
  "google-auth>=2.48.0",
  "google-auth-oauthlib>=1.3.0",
  "google-api-python-client>=2.191.0",
  "lightgbm>=4.6.0",
]

[dependency-groups]
dev = [
  "matplotlib>=3.10.8",
  "seaborn>=0.13.2",
  "pytest",
  "ruff",
  "mypy",
  "pre-commit",
  "ipykernel",
]
