[project]
name = "c2526-r5"
version = "0.1.0"
description = "Proyecto de Datos I (Grupo 5) - pipeline y API"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  # Necesario para la app en producción
  "numpy",
  "pandas",
  "pyarrow",
  "requests",
  "python-dotenv",
  "pytz",
  "minio",
  "scikit-learn>=1.8.0",
  "wandb>=0.25.1",
  "lightgbm>=4.6.0",
  "xgboost>=3.2.0",
  "torch==2.10.0",
  "torch-geometric-temporal",
  "google-auth>=2.48.0",
  "google-auth-oauthlib>=1.3.0",
  "google-api-python-client>=2.191.0",
  "fastapi[standard]",
  "jinja2",
  "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
  "matplotlib>=3.10.8",
  "seaborn>=0.13.2",
  "pytest",
  "ruff",
  "mypy",
  "pre-commit",
  "ipykernel",
  # Entrenamiento / HPO
  "scipy>=1.17.1",
  "optuna>=4.8.0",
  "optuna-integration>=4.8.0",
  "shap>=0.51.0",
  "missingno>=0.5.2",
  "category-encoders>=2.9.0",
  # ETL
  "openmeteo-requests",
  "requests-cache",
  "retry-requests",
  "gtfs-realtime-bindings",
  "protobuf",
  "bs4>=0.0.2",
  "geopy>=2.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Torch: CPU por defecto (contenedor y macOS con MPS).
# En máquinas con GPU CUDA: UV_TORCH_BACKEND=cu126 uv sync
#
# find-links apunta al índice de wheels precompilados de PyG para la versión
# concreta de torch. Sin esto uv intenta compilar torch-scatter/sparse desde
# fuente y falla en el contenedor por falta de CUDA toolkit.
# Si se cambia la versión de torch hay que actualizar esta URL.
[tool.uv]
torch-backend = "cpu"
find-links = ["https://data.pyg.org/whl/torch-2.10.0+cpu.html"]